# memorise

./: .gitignore  Dockerfile  LICENSE  README.md  build-docker.ps1  build.ps1  memorise.sln
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
bindings/csharp/Memorize.Benchmarks/: Memorize.Benchmarks.csproj  MemorizeBenchmarks.cs  Program.cs  README.md  RedisBenchmarks.cs
bindings/csharp/Memorize.Benchmarks/BenchmarkDotNet.Artifacts/results/: Memorize.Benchmarks.MemorizeBenchmarks-report-github.md  Memorize.Benchmarks.RedisBenchmarks-report-github.md
bindings/csharp/Memorize.Client/: Exceptions.cs  Memorize.Client.csproj  MemorizeClient.cs  MemorizeClientExtensions.cs  MemorizeClientOptions.cs  README.md
bindings/csharp/Memorize.Client/Protos/: memorize.proto
bindings/csharp/Memorize.IntegrationTests/: Memorize.IntegrationTests.csproj  Program.cs
bindings/csharp/Memorize.IntegrationTests/Properties/: launchSettings.json
bindings/rust/memorize-client/: Cargo.toml  README.md  build.rs
bindings/rust/memorize-client/proto/: memorize.proto
bindings/rust/memorize-client/src/: error.rs  lib.rs  options.rs
bindings/rust/memorize-integration-tests/: Cargo.toml
bindings/rust/memorize-integration-tests/src/: main.rs
demo-apps/memorize-integration-tests/: Cargo.toml
demo-apps/memorize-integration-tests-csharp/MemorizeIntegrationTests/: MemorizeIntegrationTests.csproj  Program.cs
demo-apps/memorize-integration-tests/src/: main.rs
memorize-core/: Cargo.toml
memorize-core/src/: config.rs  entry.rs  lib.rs  store.rs
memorize-proto/: Cargo.toml  build.rs
memorize-proto/proto/: memorize.proto
memorize-proto/src/: lib.rs
memorize-server/: Cargo.toml
memorize-server/src/: auth.rs  main.rs  service.rs
