[package]
name = "memorize-integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
memorize-proto = { path = "../../memorize-proto" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
rand = "0.8"
