[package]
name = "memorize-client"
version = "1.0.0"
edition = "2024"
description = "A high-level Rust client for the Memorize in-memory cache"
license = "MIT"
repository = "https://github.com/Vfleitao/memorise"
keywords = ["cache", "grpc", "memorize", "client"]
categories = ["caching", "network-programming"]

[dependencies]
# gRPC / networking
tonic = "0.12"
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread"] }

# Error handling
thiserror = "1"

# Serialization (optional feature)
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[build-dependencies]
tonic-build = "0.12"

[features]
default = []
json = ["serde", "serde_json"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
