[package]
name = "memorize-integration-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
memorize-client = { path = "../memorize-client" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
